--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,16 @@
 .header{
-    background:#424299;
+    background:#e30425;
     color: #fff;
     font-size: 3em;
     font-family: 'Proxima Nova Bl';
+}
+
+.maxa {
+    text-align: right;
+    margin-right: 1em;
+    margin-top: 1em;
+    margin-bottom: .5em;
+    display: block;
+    font-weight: 500;
+    font-size: .7em;
 }
