--- a/src/index.css
+++ b/src/index.css
@@ -49,13 +49,45 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Proxima Nova Rg';
-  font-weight: normal;
+  font-weight: bold;
   font-style: normal;
   font-display: swap;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1, h2, h3 {
+  font-weight: bold;
+}
+
 .data-field {
   font-family: 'Roboto Mono', monospace;
+}
+
+.converter-settings form {
+  display: flex;
+  flex-direction: column;
+  font-weight: normal;
+}
+
+.converter-settings .settings-title {
+  font-family: 'Proxima Nova Rg';
+  font-weight: bold;
+}
+
+.btn.btn-primary.form-control {
+  font-weight: bold;
+  color: #fff;
+  background-color: #e30425;
+  border-color: #e30425;
+  outline-color: #e30425;
+}
+
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:focus {
+  background-color: #e30425;
+  border-color: #e30425;
+  outline-color: #e30425;
+  color: #fff;
 }
