--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ body {
   font-display: swap;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #23272b;
 }
 
 h1, h2, h3 {
@@ -62,6 +63,10 @@ h1, h2, h3 {
 
 .data-field {
   font-family: 'Roboto Mono', monospace;
+}
+
+.coma-font {
+  font-size: 1em;
 }
 
 .converter-settings form {
@@ -75,19 +80,19 @@ h1, h2, h3 {
   font-weight: bold;
 }
 
-.btn.btn-primary.form-control {
-  font-weight: bold;
-  color: #fff;
-  background-color: #e30425;
-  border-color: #e30425;
-  outline-color: #e30425;
+.controls-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
-.btn-primary:hover,
-.btn-primary:active,
-.btn-primary:focus {
-  background-color: #e30425;
-  border-color: #e30425;
-  outline-color: #e30425;
+.form-control option:hover,
+select.form-control:hover,
+select.form-control {
+  cursor: pointer;
+}
+
+.btn.btn-dark.form-control {
+  font-weight: bold;
   color: #fff;
+  width: 120px;
 }
